# gpt-oss-20b-google-cloud-call

./: .gitignore  CLAUDE.md  README.md  batch_processor.py  client.py  config.py  pyproject.toml  run_tests.py
tests/: test_batch.py  test_cli.py  test_python_api.py
